# shell-rft

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.ai/: OVERALL_DESIGN.md
.ai/plans/: MILESTONE_1.md  MILESTONE_2.md  MILESTONE_3.md  MILESTONE_4.md  MILESTONE_5.md  MILESTONE_6.md
data/: baseline_results.json  rft_results.json
evaluators/shell_rft_v0/: main.py  normalize.py  policy.py  pyproject.toml  requirements.txt  sandbox.py
evaluators/shell_rft_v0/tests/: test_ep_evaluation.py  test_evaluate.py  test_evaluator_smoke.py  test_normalize.py  test_policy.py  test_sandbox.py
scripts/: compare_results.py  evaluate_rft_model.sh  generate_dataset.py  run_local_baseline.py
shell_rft/: prompts.py  schemas.py
shell_rft/generation/: __init__.py  content_search.py  csv_filtering.py  file_counting.py  topk_by_size.py  workspace.py
tests/: test_content_search.py  test_csv_filtering.py  test_ep_evaluation.py  test_file_counting.py  test_generate_dataset.py  test_generation_registry.py  test_smoke.py  test_topk_by_size.py
