[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shell-rft"
version = "0.1.0"
description = "Reinforcement fine-tuning for shell command generation"
requires-python = ">=3.11"
dependencies = [
    "bashlex>=0.18",
    "fireworks-ai[reward-kit]",
]

[dependency-groups]
dev = [
    "pytest",
    "eval-protocol",
    "python-dotenv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
